--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
@@ -24,6 +24,7 @@ NeedBraces.desc   = Checks for braces around code blocks.
 NeedBraces.name   = Need Braces
 NeedBraces.tokens = blocks to check
 NeedBraces.allowSingleLineStatement = allows single-line statements without braces
+NeedBraces.allowEmptyLoopBody = allows loops with empty bodies
 
 RightCurly.desc             = Checks the placement of right curly braces (<code>'}'</code>) for <code> else</code>, <code>try</code>, and <code>catch</code> tokens.<br/>\r\nThe policy to verify is specified using property <code>option</code>.
 RightCurly.name             = Right Curly Brace Placement
