--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
                             <failOnViolation>true</failOnViolation>
                             <headerLocation>I just need to put here smth to let it not use default - LICENSE.txt</headerLocation>
                             <propertiesLocation>config/checkstyle.properties</propertiesLocation>
+                            <includes>**\/*.java,**\/*.properties</includes>
                             <includeTestResources>false</includeTestResources>
                             <includeTestSourceDirectory>true</includeTestSourceDirectory>
                         </configuration>
@@ -179,6 +180,7 @@
                         <configuration>
                             <configLocation>config/checkstyle_sevntu_checks.xml</configLocation>
                             <failOnViolation>true</failOnViolation>
+                            <includes>**\/*.java,**\/*.properties</includes>
                             <includeResources>false</includeResources>
                             <includeTestResources>false</includeTestResources>
                             <logViolationsToConsole>true</logViolationsToConsole>
