--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,15 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.eclipse.tycho</groupId>
+                    <artifactId>tycho-p2-repository-plugin</artifactId>
+                    <version>${tycho-version}</version>
+                    <configuration>
+                        <!-- make the update site self-contained by including all transitive dependencies -->
+                        <includeAllDependencies>true</includeAllDependencies>
+                    </configuration>
+                </plugin>
                 <!-- Disable default deployer. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
