--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 10.24.0",
+    "template": "partials/releases/10.24.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 10.23.1",
     "template": "partials/releases/10.23.1/release_notes.html",
     "open": true
