--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 12.0.0",
+    "template": "partials/releases/12.0.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 11.1.0",
     "template": "partials/releases/11.1.0/release_notes.html",
     "open": true
