--- a/docs/releases.json
+++ b/docs/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 12.1.0",
+    "template": "partials/releases/12.1.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 12.0.1",
     "template": "partials/releases/12.0.1/release_notes.html",
     "open": true
